--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   },
   "dependencies": {
     "@supabase/ssr": "^0.8.0",
-    "@supabase/supabase-js": "^2.87.3",
-    "next": "16.0.10",
+    "@supabase/supabase-js": "^2.90.1",
+    "next": "^16.1.3",
     "react": "19.2.1",
     "react-dom": "19.2.1",
-    "stripe": "^20.1.0"
+    "stripe": "^20.2.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
